--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,4 @@ plugins:
 
 ### comments & analytics
 hyvor_talk_website_id: 12078
-google_analytics: UA-NNNNNNNN-N
+google_analytics: G-QM9G0T8X9M
